--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>ALL CATEGORIES</h2>
         </div>
         <div class="div2">
-            <img src="/resources/New Year Photo.png" alt="">
+            <img src="resources/New Year Photo.png" alt="">
         </div>
         <div class="banner">
             <div class="hi" >
