--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <link rel="stylesheet" href="">join now
         </div >
-        <img class="my " src="/resources/Picsart_25-01-06_13-47-53-041.png" alt="">
+        <img class="my " src="resources/Picsart_25-01-06_13-47-53-041.png" alt="">
         </div>
         <div class="bi">
             <h3 class="pi"><span class="span">Place</span>: New Park Hotel
@@ -51,12 +51,12 @@
                 <p>Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod. </p>
             </div>
             <div class="d3">
-                <img src="/resources/Ellipse 1.png" alt="">
+                <img src="resources/Ellipse 1.png" alt="">
             </div> 
             <div class="d4">
                 <h1 class="lal">2025</h1>
                 <p>Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
-                <img src="/resources/Group 96.png" alt="">
+                <img src="resources/Group 96.png" alt="">
             </div>  
             
         </div>
@@ -66,8 +66,8 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         </div>
          <div class="box">
-            <img class="boro" src="/resources/Group 75.png" alt="">
-            <img class="coto" src="/resources/Group 44.png" alt="">
+            <img class="boro" src="resources/Group 75.png" alt="">
+            <img class="coto" src="resources/Group 44.png" alt="">
          </div>
          <div  class="BEST">
             <h5 class="lal">THE BEST GIFTS</h5>
@@ -75,15 +75,15 @@
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
          </div>
          <div class="cobi">
-           <img src="/resources/Rectangle 3.png" alt="">
-           <img src="/resources/Rectangle 4.png" alt="">
-           <img src="/resources/Rectangle 5.png" alt="">
-           <img src="/resources/Rectangle 6.png" alt="">
-           <img src="/resources/Rectangle 7.png" alt="">
-           <img src="/resources/Rectangle 8.png" alt="">
+           <img src="resources/Rectangle 3.png" alt="">
+           <img src="resources/Rectangle 4.png" alt="">
+           <img src="resources/Rectangle 5.png" alt="">
+           <img src="resources/Rectangle 6.png" alt="">
+           <img src="resources/Rectangle 7.png" alt="">
+           <img src="resources/Rectangle 8.png" alt="">
          </div>
          <div class="sub">
-            <img src="/resources/Group 61.png" alt="">
+            <img src="resources/Group 61.png" alt="">
             <h1>Subscribe Newsletter</h1>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <input class="bo" type="text" placeholder="user@gmail.com">
@@ -101,11 +101,11 @@
             </div>
             <div>
                 <div class="f">
-                    <img src="/resources/Call.png" alt="">
+                    <img src="resources/Call.png" alt="">
                 <h4 class="sada">+00 123 584 124</h4>
                 </div>
                <div class="f">
-                <img src="/resources/Website.png" alt="">
+                <img src="resources/Website.png" alt="">
                 <h4 class="d">www.website.com</h4>
                </div>
             </div>
@@ -115,10 +115,10 @@
         </div>
 
         <div class="img4">
-            <img src="/resources/Facebook.png" alt="">
-            <img src="/resources/Instagram.png" alt="">
-            <img src="/resources/Twitter.png" alt="">
-            <img src="/resources/Linkedin.png" alt="">
+            <img src="resources/Facebook.png" alt="">
+            <img src="resources/Instagram.png" alt="">
+            <img src="resources/Twitter.png" alt="">
+            <img src="resources/Linkedin.png" alt="">
         </div>
 
         <div class="bol">
